internal/controller/testdata/domain/primary-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    sme.sap.com/owner-identifier: Domain.default.test-cap-01-primary
    sme.sap.com/resource-hash: de4b0d824207725328caf976383e68ca2dafdb2584340e4836c70aa4fbf05f74
  labels:
    sme.sap.com/owner-generation: "0"
    sme.sap.com/owner-identifier-hash: f3b9e769089130d9d80dc05b68fb1564beb8cccc
  name: test-cap-01-primary-gen
  namespace: default
  ownerReferences:
  - apiVersion: sme.sap.com/v1alpha2
    blockOwnerDeletion: true
    controller: true
    kind: Domain
    name: test-cap-01-primary
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - ./*.app-domain.test.local
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: default--test-cap-01-primary-gardener
      mode: SIMPLE
